# FractalHydrogenHolography-Validation

./: .cursorrules  .gitignore  AGENTS.md  Biological_Output.txt  Biological_Proxy..py  Biological_Proxy.py  Biological_Report.txt  Cognitive_Biological_Output.txt  Cognitive_Biological_Proxy.py  Cognitive_Biological_Report  Isotopologue_Output.txt  Isotopologue_Scaling_Report  Molecular_Photonic_Fractal_ Results.txt  Molecular_Photonic_Fractal_Entanglement.py  Molecular_Photonic_Fractal_Log.txt  Molecular_Photonic_Fractal_Report  PEFF_Seismic_EEG.py  PEFF_Seismic_EEG_Results.txt  PEFF_Summary.JSON  PEFF_Summary.csv  PEFF_Summary_Report.txt  README.md  pyproject.toml  requirements.txt
docs/: AGENTS.md  api_reference.md  data_sources.md  outputs.md  theory.md
docs/reports/: biological_report.md  isotopologue_report.md  molecular_photonic_report.md  peff_report.md
examples/: run_all.py  run_biological.py  run_isotopologue.py  run_molecular_photonic.py  run_peff.py
examples/outputs/biological/logs/: fractal_analysis_log.json  fractal_analysis_summary.csv
examples/outputs/isotopologue/logs/: isotopologue_scaling_log.json  isotopologue_scaling_summary.csv
examples/outputs/molecular_photonic/logs/: molecular_photonic_log.json  molecular_photonic_summary.csv
examples/outputs/peff/logs/: peff_summary.csv  peff_summary.json
outputs/: README.md
src/hhf_validation/: __init__.py
src/hhf_validation/core/: __init__.py  fractal.py
src/hhf_validation/utils/: __init__.py  constants.py  plotting.py
src/hhf_validation/validations/: __init__.py  biological_proxy.py  isotopologue.py  molecular_photonic.py  peff_seismic_eeg.py
tests/: __init__.py  test_fractal.py  test_integration.py  test_validations.py
